# INFSCI_2710_Project

./: Procfile  README.md  page_descriptions.txt  pyproject.toml  requirements.txt
app/: __init__.py  config.py  ddl_statements.sql  errors.py  forms.py  models.py  routes.py  smart_pharm.py  user_table_insert.sql
app/static/: shop_helpers.js
app/templates/: 401.html  404.html  500.html  base.html  doctor_check_appointments.html  doctor_home.html  doctor_view.html  doctor_write_prescription.html  index.html  login.html  patient_check_appointments.html  patient_create_appointment.html  patient_home.html  patient_view.html  pharmacy_home.html  pharmacy_inventory.html  pharmacy_register.html  pharmacy_shipment_history.html  pharmacy_shop.html  pharmacy_summary.html  pharmacy_view.html  plant_add_stock.html  plant_conf.html  plant_edit_stock.html  plant_home.html  plant_inventory.html  plant_shipment_history.html  plant_view.html  register.html  unauthorized.html
